syntax = "proto3";

option csharp_namespace = "HireFire.Grpc";

service CompanyService {
  rpc CreateCompany (CreateCompanyRequest) returns (CompanyResponse);
  rpc GetCompaniesForRepresentative (GetCompaniesForRepresentativeRequest)
      returns (GetCompaniesForRepresentativeResponse);

  rpc GetCompaniesToApprove (GetCompaniesToApproveRequest)
      returns (GetCompaniesToApproveResponse);

  rpc ApproveCompany (ApproveCompanyRequest)
      returns (CompanyResponse);
}

message CreateCompanyRequest {
  string name        = 1;
  string description = 2;
  string website     = 3;

  string city        = 4;
  string postcode    = 5;
  string address     = 6;

  int64 company_representative_id = 7;
}

message CompanyResponse {
  int64 id           = 1;
  string name        = 2;
  string description = 3;
  string website     = 4;
  bool is_approved   = 5;

  string city        = 6;
  string postcode    = 7;
  string address     = 8;

  int64 company_representative_id = 9;
}

message GetCompaniesForRepresentativeRequest {
  int64 company_representative_id = 1;
}

message GetCompaniesForRepresentativeResponse {
  repeated CompanyResponse companies = 1;
}

message GetCompaniesToApproveRequest {
}

message GetCompaniesToApproveResponse {
  repeated CompanyResponse companies = 1;
}

message ApproveCompanyRequest {
  int64 company_id = 1;
}

